lab-rollouts/canary/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-stable
  namespace: lab-canary
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
  - port: 80
    targetPort: 9898
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-canary
  namespace: lab-canary
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
  - port: 80
    targetPort: 9898
